se modifico el H1 del index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>bienvenidos a mi pagina</h1>
+    <h1>bienvenidos a la pagina de Vero</h1>
 </body>
 </html>
